@@ -15,25 +15,24 @@ import org.student.guestblog.data.entity.MessageEntity;
 import org.student.guestblog.rest.dto.message.MessageRequest;
 import org.student.guestblog.rest.dto.message.MessageResponse;
 import org.student.guestblog.security.User;
-import org.student.guestblog.service.FileService;
-import org.student.guestblog.service.MessageService;
+import org.student.guestblog.service.impl.FileServiceImpl;
+import org.student.guestblog.service.impl.MessageServiceImpl;
 
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
 @RestController
 @RequestMapping("/api/message")
 public class MessageController {
 
-    private final MessageService messageService;
-    private final FileService fileService;
+    private final MessageServiceImpl messageService;
+    private final FileServiceImpl fileService;
 
-    public MessageController(MessageService messageService,
-                             FileService fileService) {
+    public MessageController(MessageServiceImpl messageService,
+            FileServiceImpl fileService) {
         this.messageService = messageService;
         this.fileService = fileService;
     }
@@ -41,26 +40,26 @@ public class MessageController {
     @GetMapping
     public ResponseEntity<List<MessageResponse>> getMessages() {
         var messages =
-            messageService.getAllMessages().stream()
-                .map(MessageResponse::new)
-                .collect(Collectors.toList());
+                messageService.getAll().stream()
+                        .map(MessageResponse::new)
+                        .toList();
         var httpStatus = !messages.isEmpty() ? HttpStatus.OK : HttpStatus.NO_CONTENT;
         return ResponseEntity.status(httpStatus).body(messages);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<MessageResponse> getMessage(@PathVariable UUID id) {
-        var message = messageService.getMessage(id);
+        var message = messageService.getById(id);
         return message.map(MessageResponse::new)
-            .map(ResponseEntity::ok)
-            .orElseGet(() -> ResponseEntity.noContent().build());
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.noContent().build());
     }
 
     @PostMapping
     public ResponseEntity<MessageResponse> addMessage(Authentication authentication,
-                                                      @RequestPart("metadata") MessageRequest metadata,
-                                                      @RequestPart("file") Optional<MultipartFile> file)
-        throws IOException {
+            @RequestPart("metadata") MessageRequest metadata,
+            @RequestPart("file") Optional<MultipartFile> file)
+            throws IOException {
         var storedFile = file.map(fileService::save);
         MessageEntity savedMessageEntity = null;
         try {
@@ -69,11 +68,11 @@ public class MessageController {
                 var user = (User) authentication.getPrincipal();
                 authorId = user.id();
             }
-            savedMessageEntity = messageService.addMessage(
-                metadata.title(),
-                metadata.text(),
-                storedFile.orElse(null),
-                authorId
+            savedMessageEntity = messageService.create(
+                    metadata.title(),
+                    metadata.text(),
+                    storedFile.orElse(null),
+                    authorId
             );
         } catch (Exception e) {
             storedFile.ifPresent(fileService::delete);
@@ -84,7 +83,7 @@ public class MessageController {
 
     @DeleteMapping("/{id}")
     public ResponseEntity<?> deleteMessage(@PathVariable UUID id) {
-        messageService.deleteMessage(id);
+        messageService.delete(id);
         return ResponseEntity.ok().build();
     }
 }
